src/test/ui/issues/issue-55587.stderr
error[E0164]: expected tuple struct/variant, found method `<Path>::new`
  --> $DIR/issue-55587.rs:4:9
   |
LL |     let Path::new();
   |         ^^^^^^^^^^^ `fn` calls are not allowed in patterns
   |
   = help: for more information, visit https://doc.rust-lang.org/book/ch18-00-patterns.html

error: aborting due to previous error

For more information about this error, try `rustc --explain E0164`.
