src/test/ui/issues/issue-55587.rs
use std::path::Path;

fn main() {
    let Path::new(); //~ ERROR expected tuple struct/variant
}
